fix(Spacer): change default alignment

--- a/src/ui/Spacer/Spacer.ui.css
+++ b/src/ui/Spacer/Spacer.ui.css
@@ -26,3 +26,7 @@
 .spacer--align-end {
   align-items: end;
 }
+
+.spacer--align-stretch {
+  align-items: stretch;
+}
